9/17/22
	Added support for nabner lines
	Updated whispers line logic to use a generic minimum whispers and maximum whispers, and alias the existing nationality lines
	Updated sandwich sums to allow arbitrary "bread" digits for the sandwich on a constraint by constraint basis
	Implemented Next-To-Nine constraints
	Fixed error in doubler and japanese sum sudoku...needed to synchronize additional negative constraint variable between init methods.
	Added 7 new test cases

9/16/22
	Implemented MOTE (more odd than even) and METO (more even than odd) cages.
	Implemented consecutive quads contstraints, including negative constraint (thanks for the inspiration in today's GAS, clover!)
	Updated Kropki code to allow addition of individual anti-Kropki constraints, and modified negative constraint to call it
	Updated XVXV code to allow addition of individual anti-XVXV constraints, and modified negative constraint to call it
	Updated XV code to allow addition of individual anti-XV constraints, and modified negative constraint to call it
	Updated entropy Battenburg code to allow addition of individual anti-entropy Battenburgs, and modified negative constraint to call it
	Updated entropy quad code to allow addition of individual anti-entropy quads, and modified negative constraint to call it
	Updated friendly cell code to allow addition of individual unfriendly cells, and modified negative constraint to call it

9/15/22
	Added test code
	Updated Battenburg code to allow single cells to be labelled "Anti-Battenburg", i.e. specifically not having the constraint, and updated the global negative constraint code to use it

9/14/22bis
	Issue #20 - Implemented pencilmarks

9/14/22
	Issue #18 - Implemented block cage constraints
	Issue #19 - Implemented skyscraper constraints
	Fixed method names for keypad king and keypad knight lines
	Added additional tests
	
9/12/22bis
	Added support for parity dots (Thanks to BremSter for introducing me to these constraints.)